--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ function MM_swapImage() { //v3.0
   <div id="video">
   <h1>&quot;video&quot;</h1>
   
-  <iframe width="455" height="360" src="https://www.youtube.com/embed/MKcdz-AM138" frameborder="0" allowfullscreen></iframe>
+  <iframe width="150 height="150" src="https://www.youtube.com/embed/MKcdz-AM138" frameborder="0" allowfullscreen></iframe>
 </center>
 </p>
 </p>
