--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ function MM_swapImage() { //v3.0
 <div>
 <center>
 <h1>SERVICIO SOCIAL</h1>
- <h2>SU OBJECTIVO ES</h2>
+ <h2>SU OBJETIVO ES</h2>
  <img src="imagenes/DSCN2017.jpg" width="35%" height="22%">
  <br>
   <p>Contribuir a la formación integral del educando, desarrollando en el prestador un alto sentido de solidaridad social y de compromiso con su comunidad y retribuir a la sociedad por su contribución en la formación de los alumnos durante su proceso educativo.</p>
